# ROS2_Course

./: README.md
ackermann_vehicle_bringup/launch/: gz_sim.launch.py
ackermann_vehicle_description/: CMakeLists.txt
ackermann_vehicle_description/config/: params.yaml
ackermann_vehicle_description/launch/: display.launch.py
arm_description/: CMakeLists.txt  package.xml
big_bazu/: package.xml  setup.cfg  setup.py
big_bazu_description/: package.xml  setup.cfg  setup.py
class_pkg/: battery_model.py  package.xml  setup.py
custom_interfaces/: package.xml
custom_robotiq_description/: CMakeLists.txt  package.xml
custom_ur_bringup/: CMakeLists.txt  package.xml
custom_ur_control/: package.xml  setup.cfg  setup.py
custom_ur_description/: CMakeLists.txt  package.xml
custom_ur_interfaces/: CMakeLists.txt  package.xml
diff_summer_robot_bringup/: CMakeLists.txt  package.xml
diff_summer_robot_description/: CMakeLists.txt  README.md  package.xml
diff_summer_robot_navigation/: package.xml  setup.cfg  setup.py
differential_robot_bringup/: CMakeLists.txt  package.xml
differential_robot_description/: CMakeLists.txt
log/: latest_list
mark_one_arm_description/: CMakeLists.txt  package.xml
mark_one_arm_moveit/: CMakeLists.txt  package.xml
mark_one_arm_moveit_setup/: .setup_assistant  CMakeLists.txt  package.xml
mcr_moveit/: CMakeLists.txt  package.xml
mcr_moveit/launch/: xarm_moveit_basic_launch.py
mcr_moveit/src/: xarm_moveit_basic.cpp
prius_bringup/: CMakeLists.txt
ros2_activities/: actividad_camara_pub_sub.html  actividad_camara_pub_sub.md  instrucciones_wsl_conexion.html  instrucciones_wsl_conexion.md  instrucciones_wsl_disp_externos.html  instrucciones_wsl_disp_externos.md  old_instrucciones_wsl_conexion.md
(+155 files in other folders)
